==> intoyuniot/nRF24L01/src/nRF24L01.cpp <==
#include "Arduino.h"
#include "nRF24L01.h"
#include <stdarg.h>

uint8_t nRF24L01::read_register(uint8_t reg, uint8_t* buf, uint8_t len)
{
    uint8_t status;

    csn(LOW);
    status = SPI.transfer( R_REGISTER | ( REGISTER_MASK & reg ) );
    while ( len-- )
        *buf++ = SPI.transfer(0xff);

    csn(HIGH);

    return status;
}

uint8_t nRF24L01::read_register(uint8_t reg)
{
    csn(LOW);
    SPI.transfer( R_REGISTER | ( REGISTER_MASK & reg ) );
    uint8_t result = SPI.transfer(0xff);

    csn(HIGH);
    return result;
}

uint8_t nRF24L01::write_register(uint8_t reg, const uint8_t* buf, uint8_t len)
{
    uint8_t status;

    csn(LOW);
    status = SPI.transfer( W_REGISTER | ( REGISTER_MASK & reg ) );
    while ( len-- )
        SPI.transfer(*buf++);

    csn(HIGH);

    return status;
}

uint8_t nRF24L01::write_register(uint8_t reg, uint8_t value)
{
    uint8_t status;

    //SERIAL("write_register(%02x,%02x)",reg,value);

    csn(LOW);
    status = SPI.transfer( W_REGISTER | ( REGISTER_MASK & reg ) );
    SPI.transfer(value);
    csn(HIGH);

    return status;
}

uint8_t nRF24L01::write_payload(const void* buf, uint8_t len)
{
    uint8_t status;

    const uint8_t* current = reinterpret_cast<const uint8_t*>(buf);

    uint8_t data_len = min(len,payload_size);
    uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;

    //SERIAL("[Writing %u bytes %u blanks]",data_len,blank_len);

    csn(LOW);
    status = SPI.transfer( W_TX_PAYLOAD );
    while ( data_len-- )
        SPI.transfer(*current++);
    while ( blank_len-- )
        SPI.transfer(0);
    csn(HIGH);

    return status;
}

uint8_t nRF24L01::read_payload(void* buf, uint8_t len)
{
    uint8_t status;
    uint8_t* current = reinterpret_cast<uint8_t*>(buf);

    uint8_t data_len = min(len,payload_size);
    uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;

    //SERIAL("[Reading %u bytes %u blanks]",data_len,blank_len);

    csn(LOW);
    status = SPI.transfer( R_RX_PAYLOAD );
    while ( data_len-- )
        *current++ = SPI.transfer(0xff);
    while ( blank_len-- )
        SPI.transfer(0xff);
    csn(HIGH);

    return status;
}

uint8_t nRF24L01::flush_rx(void)
{
    uint8_t status;

    csn(LOW);
    status = SPI.transfer( FLUSH_RX );
    csn(HIGH);

    return status;
}

uint8_t nRF24L01::flush_tx(void)
{
    uint8_t status;

    csn(LOW);
    status = SPI.transfer( FLUSH_TX );
    csn(HIGH);

    return status;
}

uint8_t nRF24L01::get_status(void)
{
    uint8_t status;

    csn(LOW);
    status = SPI.transfer( NOP );
    csn(HIGH);

    return status;
}

void nRF24L01::setChannel(uint8_t channel)
{
    // TODO: This method could take advantage of the 'wide_band' calculation
    // done in setChannel() to require certain channel spacing.

    const uint8_t max_channel = 127;
    write_register(RF_CH,min(channel,max_channel));
}

void nRF24L01::setPayloadSize(uint8_t size)
{
    const uint8_t max_payload_size = 32;
    payload_size = min(size,max_payload_size);
}

void nRF24L01::startListening(void)
{
    write_register(CONFIG, read_register(CONFIG) | _BV(PWR_UP) | _BV(PRIM_RX));
    write_register(STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT) );

    // Restore the pipe0 adddress, if exists
    if (pipe0_reading_address)
        write_register(RX_ADDR_P0, reinterpret_cast<const uint8_t*>(&pipe0_reading_address), 5);

    // Flush buffers
    flush_rx();
    flush_tx();

    // Go!
    ce(HIGH);

    // wait for the radio to come up (130us actually only needed)
    delayMicroseconds(130);
}

void nRF24L01::stopListening(void)
{
    ce(LOW);
    flush_tx();
    flush_rx();
}

void nRF24L01::powerDown(void)
{
    write_register(CONFIG,read_register(CONFIG) & ~_BV(PWR_UP));
}

void nRF24L01::powerUp(void)
{
    write_register(CONFIG,read_register(CONFIG) | _BV(PWR_UP));
}

uint8_t nRF24L01::getDynamicPayloadSize(void)
{
    uint8_t result = 0;

    csn(LOW);
    SPI.transfer( R_RX_PL_WID );
    result = SPI.transfer(0xff);
    csn(HIGH);

    return result;
}

bool nRF24L01::available(void)
{
    return available(NULL);
}

bool nRF24L01::available(uint8_t* pipe_num)
{
    uint8_t status = get_status();

    // Too noisy, enable if you really want lots o data!!
    //SERIAL(print_status(status));

    bool result = ( status & _BV(RX_DR) );

    if (result)
    {
        // If the caller wants the pipe number, include that
        if ( pipe_num )
            *pipe_num = ( status >> RX_P_NO ) & B111;

        // Clear the status bit

        // ??? Should this REALLY be cleared now?  Or wait until we
        // actually READ the payload?

        write_register(STATUS,_BV(RX_DR) );

        // Handle ack payload receipt
        if ( status & _BV(TX_DS) )
        {
            write_register(STATUS,_BV(TX_DS));
        }
    }

    return result;
}

bool nRF24L01::read( void* buf, uint8_t len )
{
    // Fetch the payload
    read_payload( buf, len );

    // was this the last of the data available?
    return read_register(FIFO_STATUS) & _BV(RX_EMPTY);
}

void nRF24L01::whatHappened(bool& tx_ok,bool& tx_fail,bool& rx_ready)
{
    // Read the status & reset the status in one easy call
    // Or is that such a good idea?
    uint8_t status = write_register(STATUS,_BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT) );

    // Report to the user what happened
    tx_ok = status & _BV(TX_DS);
    tx_fail = status & _BV(MAX_RT);
    rx_ready = status & _BV(RX_DR);
}

void nRF24L01::openWritingPipe(uint64_t value)
{
    // Note that AVR 8-bit uC's store this LSB first, and the NRF24L01(+)
    // expects it LSB first too, so we're good.

    write_register(RX_ADDR_P0, reinterpret_cast<uint8_t*>(&value), 5);
    write_register(TX_ADDR, reinterpret_cast<uint8_t*>(&value), 5);

    const uint8_t max_payload_size = 32;
    write_register(RX_PW_P0,min(payload_size,max_payload_size));
}

void nRF24L01::openReadingPipe(uint8_t child, uint64_t address)
{
    // If this is pipe 0, cache the address.  This is needed because
    // openWritingPipe() will overwrite the pipe 0 address, so
    // startListening() will have to restore it.
    if (child == 0)
        pipe0_reading_address = address;

    if (child <= 6)
    {
        // For pipes 2-5, only write the LSB
        if ( child < 2 )
            write_register(child_pipe[child], reinterpret_cast<const uint8_t*>(&address), 5);
        else
            write_register(child_pipe[child], reinterpret_cast<const uint8_t*>(&address), 1);

        write_register(child_payload_size[child],payload_size);

        // Note it would be more efficient to set all of the bits for all open
        // pipes at once.  However, I thought it would make the calling code
        // more simple to do it this way.
        write_register(EN_RXADDR,read_register(EN_RXADDR) | _BV(child_pipe_enable[child]));
    }
}

void nRF24L01::toggle_features(void)
{
    csn(LOW);
    SPI.transfer( ACTIVATE );
    SPI.transfer( 0x73 );
    csn(HIGH);
}

void nRF24L01::enableDynamicPayloads(void)
{
    // Enable dynamic payload throughout the system
    write_register(FEATURE,read_register(FEATURE) | _BV(EN_DPL) );

    // If it didn't work, the features are not enabled
    if ( ! read_register(FEATURE) )
    {
        // So enable them and try again
        toggle_features();
        write_register(FEATURE,read_register(FEATURE) | _BV(EN_DPL) );
    }

    ////Serial.print(printf("FEATURE=%i\r\n",read_register(FEATURE)));

    // Enable dynamic payload on all pipes
    //
    // Not sure the use case of only having dynamic payload on certain
    // pipes, so the library does not support it.
    write_register(DYNPD,read_register(DYNPD) | _BV(DPL_P5) | _BV(DPL_P4) | _BV(DPL_P3) | _BV(DPL_P2) | _BV(DPL_P1) | _BV(DPL_P0));

    dynamic_payloads_enabled = true;
}

void nRF24L01::enableAckPayload(void)
{
    //
    // enable ack payload and dynamic payload features
    //

    write_register(FEATURE,read_register(FEATURE) | _BV(EN_ACK_PAY) | _BV(EN_DPL) );

    // If it didn't work, the features are not enabled
    if ( ! read_register(FEATURE) )
    {
        // So enable them and try again
        toggle_features();
        write_register(FEATURE,read_register(FEATURE) | _BV(EN_ACK_PAY) | _BV(EN_DPL) );
    }

    ////Serial.print(printf("FEATURE=%i\r\n",read_register(FEATURE)));

    //
    // Enable dynamic payload on pipes 0 & 1
    //

    write_register(DYNPD,read_register(DYNPD) | _BV(DPL_P1) | _BV(DPL_P0));
}

void nRF24L01::writeAckPayload(uint8_t pipe, const void* buf, uint8_t len)
{
    const uint8_t* current = reinterpret_cast<const uint8_t*>(buf);

    csn(LOW);
    SPI.transfer( W_ACK_PAYLOAD | ( pipe & B111 ) );
    const uint8_t max_payload_size = 32;
    uint8_t data_len = min(len,max_payload_size);
    while ( data_len-- )
        SPI.transfer(*current++);

    csn(HIGH);
}

bool nRF24L01::isAckPayloadAvailable(void)
{
    bool result = ack_payload_available;
    ack_payload_available = false;
    return result;
}

void nRF24L01::setAutoAck(bool enable)
{
    if ( enable )
        write_register(EN_AA, B111111);
    else
        write_register(EN_AA, 0);
}

void nRF24L01::setAutoAck( uint8_t pipe, bool enable )
{
    if ( pipe <= 6 )
    {
        uint8_t en_aa = read_register( EN_AA ) ;
        if( enable )
        {
            en_aa |= _BV(pipe) ;
        }
        else
        {
            en_aa &= ~_BV(pipe) ;
        }
        write_register( EN_AA, en_aa ) ;
    }
}

void nRF24L01::setPALevel(rf24_pa_dbm_e level)
{
    uint8_t setup = read_register(RF_SETUP) ;
    setup &= ~(_BV(RF_PWR_LOW) | _BV(RF_PWR_HIGH)) ;

    // switch uses RAM (evil!)
    if ( level == RF24_PA_MAX )
    {
        setup |= (_BV(RF_PWR_LOW) | _BV(RF_PWR_HIGH)) ;
    }
    else if ( level == RF24_PA_HIGH )
    {
        setup |= _BV(RF_PWR_HIGH) ;
    }
    else if ( level == RF24_PA_LOW )
    {
        setup |= _BV(RF_PWR_LOW);
    }
    else if ( level == RF24_PA_MIN )
    {
        // nothing
    }
    else if ( level == RF24_PA_ERROR )
    {
        // On error, go to maximum PA
        setup |= (_BV(RF_PWR_LOW) | _BV(RF_PWR_HIGH)) ;
    }

    write_register( RF_SETUP, setup ) ;
}

rf24_pa_dbm_e nRF24L01::getPALevel(void)
{
    rf24_pa_dbm_e result = RF24_PA_ERROR ;
    uint8_t power = read_register(RF_SETUP) & (_BV(RF_PWR_LOW) | _BV(RF_PWR_HIGH)) ;

    // switch uses RAM (evil!)
    if ( power == (_BV(RF_PWR_LOW) | _BV(RF_PWR_HIGH)) )
    {
        result = RF24_PA_MAX ;
    }
    else if ( power == _BV(RF_PWR_HIGH) )
    {
        result = RF24_PA_HIGH ;
    }
    else if ( power == _BV(RF_PWR_LOW) )
    {
        result = RF24_PA_LOW ;
    }
    else
    {
        result = RF24_PA_MIN ;
    }

    return result ;
}

bool nRF24L01::setDataRate(rf24_datarate_e speed)
{
    bool result = false;
    uint8_t setup = read_register(RF_SETUP) ;

    // HIGH and LOW '00' is 1Mbs - our default
    wide_band = false ;
    setup &= ~(_BV(RF_DR_LOW) | _BV(RF_DR_HIGH)) ;
    if( speed == RF24_250KBPS )
    {
        // Must set the RF_DR_LOW to 1; RF_DR_HIGH (used to be RF_DR) is already 0
        // Making it '10'.
        wide_band = false ;
        setup |= _BV( RF_DR_LOW ) ;
    }
    else
    {
        // Set 2Mbs, RF_DR (RF_DR_HIGH) is set 1
        // Making it '01'
        if ( speed == RF24_2MBPS )
        {
            wide_band = true ;
            setup |= _BV(RF_DR_HIGH);
        }
        else
        {
            // 1Mbs
            wide_band = false ;
        }
    }
    write_register(RF_SETUP,setup);

    // Verify our result
    if ( read_register(RF_SETUP) == setup )
    {
        result = true;
    }
    else
    {
        wide_band = false;
    }

    return result;
}

rf24_datarate_e nRF24L01::getDataRate( void )
{
    rf24_datarate_e result ;
    uint8_t dr = read_register(RF_SETUP) & (_BV(RF_DR_LOW) | _BV(RF_DR_HIGH));

    // switch uses RAM (evil!)
    // Order matters in our case below
    if ( dr == _BV(RF_DR_LOW) )
    {
        // '10' = 250KBPS
        result = RF24_250KBPS ;
    }
    else if ( dr == _BV(RF_DR_HIGH) )
    {
        // '01' = 2MBPS
        result = RF24_2MBPS ;
    }
    else
    {
        // '00' = 1MBPS
        result = RF24_1MBPS ;
    }
    return result ;
}

void nRF24L01::setCRCLength(rf24_crclength_e length)
{
    uint8_t config = read_register(CONFIG) & ~( _BV(CRCO) | _BV(EN_CRC)) ;

    // switch uses RAM (evil!)
    if ( length == RF24_CRC_DISABLED )
    {
        // Do nothing, we turned it off above.
    }
    else if ( length == RF24_CRC_8 )
    {
        config |= _BV(EN_CRC);
    }
    else
    {
        config |= _BV(EN_CRC);
        config |= _BV( CRCO );
    }
    write_register( CONFIG, config ) ;
}

rf24_crclength_e nRF24L01::getCRCLength(void)
{
    rf24_crclength_e result = RF24_CRC_DISABLED;
    uint8_t config = read_register(CONFIG) & ( _BV(CRCO) | _BV(EN_CRC)) ;

    if ( config & _BV(EN_CRC ) )
    {
        if ( config & _BV(CRCO) )
            result = RF24_CRC_16;
        else
            result = RF24_CRC_8;
    }

    return result;
}

void nRF24L01::disableCRC( void )
{
    uint8_t disable = read_register(CONFIG) & ~_BV(EN_CRC) ;
    write_register( CONFIG, disable ) ;
}

void nRF24L01::setRetries(uint8_t delay, uint8_t count)
{
    write_register(SETUP_RETR,(delay&0xf)<<ARD | (count&0xf)<<ARC);
}
