==> valentyn-zaitsev/Console_submarine_stm32f411/Core/Src/nrf24l01.c <==
#include "nrf24.h"
#define DWT_CONTROL *(volatile unsigned long *)0xE0001000
#define SCB_DEMCR   *(volatile unsigned long *)0xE000EDFC
#define HIGH 1
#define LOW  0
#define DEBUG_UART	1

static uint8_t nrf_read_register(uint8_t reg)
{
	uint8_t addr = R_REGISTER | (REGISTER_MASK & reg);
	uint8_t dt = 0;

	nrf_csn(LOW);
	HAL_SPI_TransmitReceive(nrf_spi, &addr, &dt, 1, 1000);
	HAL_SPI_TransmitReceive(nrf_spi, (uint8_t*)0xff, &dt, 1, 1000);
	nrf_csn(HIGH);
	return dt;
}

static uint8_t nrf_write_register(uint8_t reg, uint8_t value)
{
	uint8_t status = 0;
	uint8_t addr = W_REGISTER | (REGISTER_MASK & reg);
	nrf_csn(LOW);
	HAL_SPI_TransmitReceive(nrf_spi, &addr, &status, 1, 100);
	HAL_SPI_Transmit(nrf_spi, &value, 1, 1000);
	nrf_csn(HIGH);
	return status;
}

uint8_t nrf_write_payload(const void* buf, uint8_t data_len, const uint8_t writeType)
{
	uint8_t status = 0;
	const uint8_t* current = (const uint8_t*)buf;
	uint8_t addr = writeType;

	data_len = rf24_min(data_len, payload_size);
	uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;

	nrf_csn(LOW);
	HAL_SPI_TransmitReceive(nrf_spi, &addr, &status, 1, 100);
	HAL_SPI_Transmit(nrf_spi, (uint8_t*)current, data_len, 100);

	while(blank_len--)
	{
		uint8_t empt = 0;
		HAL_SPI_Transmit(nrf_spi, &empt, 1, 100);
	}

	nrf_csn(HIGH);
	return status;
}

uint8_t nrf_read_payload(void* buf, uint8_t data_len)
{
	uint8_t status = 0;
	uint8_t* current = (uint8_t*)buf;

	if(data_len > payload_size)
	{
		data_len = payload_size;
	}

	uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;

	uint8_t addr = R_RX_PAYLOAD;
	nrf_csn(LOW);
	HAL_SPI_Transmit(nrf_spi, &addr, 1, 100);
	HAL_SPI_Receive(nrf_spi, (uint8_t*)current, data_len, 100);

	while(blank_len--)
	{
		uint8_t empt = 0;
		HAL_SPI_Receive(nrf_spi, &empt, 1, 100);
	}

	nrf_csn(HIGH);
	return status;
}

uint8_t nrf_flush_rx(void)
{
	return nrf_spiTrans(FLUSH_RX);
}

uint8_t nrf_flush_tx(void)
{
	return nrf_spiTrans(FLUSH_TX);
}

uint8_t nrf_get_status(void)
{
	return nrf_spiTrans(NOP);
}

void nrf_setChannel(uint8_t channel)
{
	nrf_write_register(RF_CH, channel);
}

void nrf_setPayloadSize(uint8_t size)
{
	payload_size = rf24_min(size, 32);
}

void nrf_startListening(void)
{
	nrf_powerUp();

	nrf_write_register(NRF_CONFIG, nrf_read_register(NRF_CONFIG) | (1 << PRIM_RX));
	nrf_write_register(NRF_STATUS, (1 << RX_DR) | (1 << TX_DS) | (1 << MAX_RT));
	nrf_ce(HIGH);
	// Restore the pipe0 adddress, if exists
	if(pipe0_reading_address[0] > 0)
	{
		nrf_write_registerMy(RX_ADDR_P0, pipe0_reading_address, addr_width);
	}
	else
	{
		nrf_closeReadingPipe(0);
	}

	if(nrf_read_register(FEATURE) & (1 << EN_ACK_PAY))
	{
		nrf_flush_tx();
	}
}

void nrf_stopListening(void)
{
	nrf_ce(LOW);
	delay_us(txDelay);

	if(nrf_read_register(FEATURE) & (1 << EN_ACK_PAY))
	{
		delay_us(txDelay); //200
		nrf_flush_tx();
	}

	nrf_write_register(NRF_CONFIG, (nrf_read_register(NRF_CONFIG)) & ~(1 << PRIM_RX));
	nrf_write_register(EN_RXADDR, nrf_read_register(EN_RXADDR) | (1 << child_pipe_enable[0])); // Enable RX on pipe0
}

void nrf_powerDown(void)
{
	nrf_ce(LOW); // Guarantee CE is low on powerDown
	nrf_write_register(NRF_CONFIG, nrf_read_register(NRF_CONFIG) & ~(1 << PWR_UP));
}

void nrf_powerUp(void)
{
	uint8_t cfg = nrf_read_register(NRF_CONFIG);
	// if not powered up then power up and wait for the radio to initialize
	if(!(cfg & (1 << PWR_UP)))
	{
		nrf_write_register(NRF_CONFIG, cfg | (1 << PWR_UP));
		HAL_Delay(5);
	}
}

uint8_t nrf_getDynamicPayloadSize(void)
{
	uint8_t result = 0, addr;
	nrf_csn(LOW);
	addr = R_RX_PL_WID;
	HAL_SPI_TransmitReceive(nrf_spi, &addr, &result, 1, 1000);
	HAL_SPI_TransmitReceive(nrf_spi, (uint8_t*)0xff, &result, 1, 1000);
	nrf_csn(HIGH);

	if(result > 32)
	{
		nrf_flush_rx();
		HAL_Delay(2);
		return 0;
	}

	return result;
}

bool nrf_available(uint8_t* pipe_num)
{
	if(!(nrf_read_register(FIFO_STATUS) & (1 << RX_EMPTY)))
	{
		if(pipe_num) // If the caller wants the pipe number, include that
		{
			uint8_t status = nrf_get_status();
			*pipe_num = (status >> RX_P_NO) & 0x07;
		}

		return 1;
	}

	return 0;
}

void nrf_read(void* buf, uint8_t len)
{
	nrf_read_payload(buf, len);
	nrf_write_register(NRF_STATUS, (1 << RX_DR) | (1 << MAX_RT) | (1 << TX_DS));
}

uint8_t nrf_whatHappened()
{
	uint8_t status = nrf_write_register(NRF_STATUS, (1 << RX_DR) | (1 << TX_DS) | (1 << MAX_RT));
	/*uint8_t tx_ok = status & (1 << TX_DS);
	uint8_t tx_fail = status & (1 << MAX_RT);
	uint8_t rx_ready = status & (1 << RX_DR);*/
	return status;
}

void nrf_openWritingPipe(uint64_t value)
{
	nrf_write_registerMy(RX_ADDR_P0, (uint8_t*)&value, addr_width);
	nrf_write_registerMy(TX_ADDR, (uint8_t*)&value, addr_width);
	nrf_write_register(RX_PW_P0, payload_size);
}

void nrf_openReadingPipe(uint8_t child, uint64_t address)
{
	if(child == 0)
	{
		memcpy(pipe0_reading_address, &address, addr_width);
	}

	if(child <= 6)
	{
		// For pipes 2-5, only write the LSB
		if(child < 2)
			nrf_write_registerMy(child_pipe[child], (const uint8_t*)&address, addr_width);
		else
			nrf_write_registerMy(child_pipe[child], (const uint8_t*)&address, 1);

		nrf_write_register(child_payload_size[child], payload_size);
		nrf_write_register(EN_RXADDR, nrf_read_register(EN_RXADDR) | (1 << child_pipe_enable[child]));
	}
}

void nrf_toggle_features(void)
{
	uint8_t addr = ACTIVATE;
	nrf_csn(LOW);
	HAL_SPI_Transmit(nrf_spi, &addr, 1, 1000);
	HAL_SPI_Transmit(nrf_spi, (uint8_t*)0x73, 1, 1000);
	nrf_csn(HIGH);
}

void nrf_enableDynamicPayloads(void)
{
	nrf_write_register(FEATURE, nrf_read_register(FEATURE) | (1 << EN_DPL));
	nrf_write_register(DYNPD, nrf_read_register(DYNPD) | (1 << DPL_P5) | (1 << DPL_P4) | (1 << DPL_P3) | (1 << DPL_P2) | (1 << DPL_P1) | (1 << DPL_P0));
	dynamic_payloads_enabled = true;
}

void nrf_enableAckPayload(void)
{
	nrf_write_register(FEATURE, nrf_read_register(FEATURE) | (1 << EN_ACK_PAY) | (1 << EN_DPL));
	nrf_write_register(DYNPD, nrf_read_register(DYNPD) | (1 << DPL_P1) | (1 << DPL_P0));
	dynamic_payloads_enabled = true;
}

void nrf_writeAckPayload(uint8_t pipe, const void* buf, uint8_t len)
{
	const uint8_t* current = (const uint8_t*)buf;
	uint8_t data_len = rf24_min(len, 32);
	uint8_t addr = W_ACK_PAYLOAD | (pipe & 0x07);
	nrf_csn(LOW);
	HAL_SPI_Transmit(nrf_spi, &addr, 1, 1000);
	HAL_SPI_Transmit(nrf_spi, (uint8_t*)current, data_len, 1000);
	nrf_csn(HIGH);
}

bool nrf_isAckPayloadAvailable(void)
{
	return !(nrf_read_register(FIFO_STATUS) & (1 << RX_EMPTY));
}

void nrf_setAutoAck(bool enable)
{
	if(enable)
		nrf_write_register(EN_AA, 0x3F);
	else
		nrf_write_register(EN_AA, 0);
}

void nrf_setPALevel(rf24_pa_dbm_e level)
{
  uint8_t setup = nrf_read_register(RF_SETUP) & 0xF8;

  if(level > 3) // If invalid level, go to max PA
  {
	  level = (RF24_PA_MAX << 1) + 1;		// +1 to support the SI24R1 chip extra bit
  }
  else
  {
	  level = (level << 1) + 1;	 		// Else set level as requested
  }

  nrf_write_register(RF_SETUP, setup |= level);	// Write it to the chip
}

uint8_t nrf_getPALevel(void)
{
	return (nrf_read_register(RF_SETUP) & ((1 << RF_PWR_LOW) | (1 << RF_PWR_HIGH))) >> 1;
}

bool nrf_setDataRate(rf24_datarate_e speed)
{
	bool result = false;
	uint8_t setup = nrf_read_register(RF_SETUP);
	setup &= ~((1 << RF_DR_LOW) | (1 << RF_DR_HIGH));
	txDelay = 85;

	if(speed == RF24_250KBPS)
	{
		setup |= (1 << RF_DR_LOW);
		txDelay = 155;
	}
	else
	{
		if(speed == RF24_2MBPS)
		{
			setup |= (1 << RF_DR_HIGH);
			txDelay = 65;
		}
	}

	nrf_write_register(RF_SETUP, setup);
	uint8_t ggg = nrf_read_register(RF_SETUP);

	if(ggg == setup)
	{
		result = true;
	}

	return result;
}

rf24_datarate_e nrf_getDataRate(void)
{
	rf24_datarate_e result ;
	uint8_t dr = nrf_read_register(RF_SETUP) & ((1 << RF_DR_LOW) | (1 << RF_DR_HIGH));

	// switch uses RAM (evil!)
	// Order matters in our case below
	if(dr == (1 << RF_DR_LOW))
	{
		result = RF24_250KBPS;
	}
	else if(dr == (1 << RF_DR_HIGH))
	{
		result = RF24_2MBPS;
	}
	else
	{
		result = RF24_1MBPS;
	}

	return result;
}

void nrf_setCRCLength(rf24_crclength_e length)
{
	uint8_t config = nrf_read_register(NRF_CONFIG) & ~((1 << CRCO) | (1 << EN_CRC));

	if(length == RF24_CRC_DISABLED)
	{
		// Do nothing, we turned it off above.
	}
	else if(length == RF24_CRC_8)
	{
		config |= (1 << EN_CRC);
	}
	else
	{
		config |= (1 << EN_CRC);
		config |= (1 << CRCO);
	}

	nrf_write_register(NRF_CONFIG, config);
}

rf24_crclength_e nrf_getCRCLength(void)
{
	rf24_crclength_e result = RF24_CRC_DISABLED;

	uint8_t config = nrf_read_register(NRF_CONFIG) & ((1 << CRCO) | (1 << EN_CRC));
	uint8_t AA = nrf_read_register(EN_AA);

	if(config & (1 << EN_CRC) || AA)
	{
		if(config & (1 << CRCO))
		  result = RF24_CRC_16;
		else
		  result = RF24_CRC_8;
	}

	return result;
}

void nrf_disableCRC(void)
{
	uint8_t disable = nrf_read_register(NRF_CONFIG) & ~(1 << EN_CRC);
	nrf_write_register(NRF_CONFIG, disable);
}

void nrf_setRetries(uint8_t delay, uint8_t count)
{
	nrf_write_register(SETUP_RETR, (delay&0xf)<<ARD | (count&0xf)<<ARC);
}
